[gd_scene load_steps=14 format=3 uid="uid://cqnoo2277h8ds"]

[ext_resource type="Script" uid="uid://tha8w2rmwcql" path="res://scenes/ui/achievements.gd" id="1_bblh1"]
[ext_resource type="FontFile" uid="uid://c7eg3ms3bo8qv" path="res://sprites/ui/UncialAntiqua-Regular.ttf" id="2_jml7r"]
[ext_resource type="Texture2D" uid="uid://dphc21aqf5r1m" path="res://sprites/ui/Button_neutral.png" id="2_ll4mt"]
[ext_resource type="Texture2D" uid="uid://bpvowenbyhjyy" path="res://sprites/ui/Button_pressed.png" id="4_0a75a"]
[ext_resource type="Texture2D" uid="uid://cvilxq7eyc1kj" path="res://sprites/ui/Button_highlight.png" id="4_5cnrf"]
[ext_resource type="Texture2D" uid="uid://chy5d1g28au0x" path="res://sprites/ui/HUD_MenuTemplate.png" id="6_hlpig"]
[ext_resource type="Texture2D" uid="uid://c6a6cymtsl4cd" path="res://sprites/ui/EmptyIcon.png" id="7_svu7p"]
[ext_resource type="Texture2D" uid="uid://csuu5qvhmmnvx" path="res://sprites/ui/HUD_MenuLine.png" id="8_2rfcd"]


[sub_resource type="FontVariation" id="FontVariation_0a75a"]
base_font = ExtResource("2_jml7r")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t75oh"]
texture = ExtResource("2_ll4mt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2xc4j"]
texture = ExtResource("4_0a75a")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hlpig"]
texture = ExtResource("2_ll4mt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_svu7p"]
texture = ExtResource("2_ll4mt")

[node name="Achievements" type="Node2D"]
script = ExtResource("1_bblh1")

[node name="Background" type="ColorRect" parent="."]
offset_left = -6.0
offset_top = -4.0
offset_right = 1619.0
offset_bottom = 920.0
color = Color(0.18359044, 0.18359044, 0.18359044, 1)

[node name="ButtonBackToMenu" type="Button" parent="."]
z_index = 2
offset_left = 1397.0
offset_top = 820.0
offset_right = 1519.0
offset_bottom = 870.0
theme_override_fonts/font = SubResource("FontVariation_0a75a")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_t75oh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2xc4j")
theme_override_styles/hover = SubResource("StyleBoxTexture_hlpig")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_svu7p")
text = "BACK "

[node name="Highlight" type="TextureRect" parent="ButtonBackToMenu"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 829.0
offset_bottom = 204.0
scale = Vector2(0.149, 0.26)
texture = ExtResource("4_5cnrf")

[node name="SpellData" type="TextureRect" parent="."]
offset_left = 1029.0
offset_right = 2229.0
offset_bottom = 1525.0
scale = Vector2(0.45, 0.56)
texture = ExtResource("6_hlpig")

[node name="ListOfSpells" type="TextureRect" parent="."]
offset_left = 1120.0
offset_top = -16.0
offset_right = 2320.0
offset_bottom = 1509.0
rotation = -4.712389
scale = Vector2(0.745, 0.73)
texture = ExtResource("6_hlpig")

[node name="SpellDataIcon" type="TextureRect" parent="."]
offset_left = 1216.0
offset_top = 118.99999
offset_right = 1266.0
offset_bottom = 169.0
scale = Vector2(3.325, 3.325)
texture = ExtResource("7_svu7p")

[node name="StickOfTruth1" type="TextureRect" parent="."]
offset_left = 1118.0
offset_top = 395.895
offset_right = 1877.0
offset_bottom = 435.895
scale = Vector2(0.46, 0.46)
texture = ExtResource("8_2rfcd")

[node name="StickOfTruth2" type="TextureRect" parent="."]
offset_left = 1118.0
offset_top = 622.0
offset_right = 1877.0
offset_bottom = 662.00024
scale = Vector2(0.46, 0.46)
texture = ExtResource("8_2rfcd")

[node name="AchIcon1" type="TextureRect" parent="."]
offset_left = 207.0
offset_top = 148.0
offset_right = 257.0
offset_bottom = 198.0
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon2" type="TextureRect" parent="."]
offset_left = 366.39
offset_top = 148.0
offset_right = 416.39
offset_bottom = 198.0
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon3" type="TextureRect" parent="."]
offset_left = 525.77997
offset_top = 148.0
offset_right = 575.78
offset_bottom = 198.0
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon4" type="TextureRect" parent="."]
offset_left = 685.17
offset_top = 148.0
offset_right = 735.17
offset_bottom = 198.0
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon5" type="TextureRect" parent="."]
offset_left = 844.55994
offset_top = 148.0
offset_right = 894.55994
offset_bottom = 198.0
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon6" type="TextureRect" parent="."]
offset_left = 207.0
offset_top = 287.39
offset_right = 257.0
offset_bottom = 337.39
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon7" type="TextureRect" parent="."]
offset_left = 366.39
offset_top = 287.39
offset_right = 416.39
offset_bottom = 337.39
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon8" type="TextureRect" parent="."]
offset_left = 525.77997
offset_top = 287.39
offset_right = 575.78
offset_bottom = 337.39
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon9" type="TextureRect" parent="."]
offset_left = 685.17
offset_top = 287.39
offset_right = 735.17
offset_bottom = 337.39
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon10" type="TextureRect" parent="."]
offset_left = 844.55994
offset_top = 287.39
offset_right = 894.55994
offset_bottom = 337.39
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon11" type="TextureRect" parent="."]
offset_left = 207.0
offset_top = 426.77997
offset_right = 257.0
offset_bottom = 476.78003
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon12" type="TextureRect" parent="."]
offset_left = 366.39
offset_top = 426.77997
offset_right = 416.39
offset_bottom = 476.78003
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon13" type="TextureRect" parent="."]
offset_left = 525.77997
offset_top = 426.77997
offset_right = 575.78
offset_bottom = 476.78003
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon14" type="TextureRect" parent="."]
offset_left = 685.17
offset_top = 426.77997
offset_right = 735.17
offset_bottom = 476.78003
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon15" type="TextureRect" parent="."]
offset_left = 844.55994
offset_top = 426.77997
offset_right = 894.55994
offset_bottom = 476.78003
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon16" type="TextureRect" parent="."]
offset_left = 207.00002
offset_top = 567.1699
offset_right = 257.0
offset_bottom = 617.1699
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon17" type="TextureRect" parent="."]
offset_left = 366.39
offset_top = 567.1699
offset_right = 416.39
offset_bottom = 617.1699
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon18" type="TextureRect" parent="."]
offset_left = 525.77997
offset_top = 567.1699
offset_right = 575.78
offset_bottom = 617.1699
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon19" type="TextureRect" parent="."]
offset_left = 685.17
offset_top = 567.1699
offset_right = 735.17
offset_bottom = 617.1699
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="AchIcon20" type="TextureRect" parent="."]
offset_left = 844.55994
offset_top = 567.1699
offset_right = 894.55994
offset_bottom = 617.1699
scale = Vector2(1.85, 1.85)
texture = ExtResource("7_svu7p")

[node name="TextC" type="Label" parent="."]
offset_left = 1129.0
offset_top = 338.0
offset_right = 1451.0
offset_bottom = 381.0
theme_override_fonts/font = ExtResource("2_jml7r")
theme_override_font_sizes/font_size = 22
text = "TEXT C"

[node name="TextD" type="Label" parent="."]
offset_left = 1132.0
offset_top = 436.0
offset_right = 1449.0
offset_bottom = 605.0
theme_override_fonts/font = ExtResource("2_jml7r")
theme_override_font_sizes/font_size = 21
text = "TEXT D"

[node name="TextE" type="Label" parent="."]
offset_left = 1131.0
offset_top = 655.0
offset_right = 1450.0
offset_bottom = 720.0
theme_override_fonts/font = ExtResource("2_jml7r")
theme_override_font_sizes/font_size = 22
text = "TEXT E"
